Fixed word break on 'previous searches' to not break the text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,3 +20,8 @@ option {
 .wBorder {
   border: ridge 5px white;
 }
+
+.noWrap {
+  word-break: keep-all;
+}
+
